crates/paper-shaders/src/snapshots/paper_shaders__tests__sand_grain_frag_vulkan450.snap
---
source: crates/paper-shaders/src/tests.rs
expression: "sand_grain_frag(Dialect::Vulkan450)"
---
#version 450
layout(location = 0) in vec2 v_uv;
layout(location = 1) in float v_alpha;
layout(location = 2) in float v_bright;
layout(location = 3) in float v_mix;
layout(push_constant) uniform PC {
    vec2 u_res;
    float u_progress;
    int u_style;
    int u_pid_base;
    int u_fill;
    int u_rgba_a;
    int u_rgba_b;
    vec4 u_uv_a;
    vec4 u_uv_b;
};
layout(set = 0, binding = 0) uniform sampler2D luma_a;
layout(set = 0, binding = 1) uniform sampler2D chroma_a;
layout(set = 1, binding = 0) uniform sampler2D luma_b;
layout(set = 1, binding = 1) uniform sampler2D chroma_b;
layout(location = 0) out vec4 frag;
vec3 nv12(float y, vec2 c) {
    float yf = (y - 16.0 / 255.0) * (255.0 / 219.0);
    float u = c.x - 0.5;
    float v = c.y - 0.5;
    return clamp(vec3(yf + 1.5748 * v, yf - 0.1873 * u - 0.4681 * v, yf + 1.8556 * u), 0.0, 1.0);
}
vec3 side_a(vec2 uv) {
    vec2 ua = uv * u_uv_a.xy + u_uv_a.zw;
    if (u_fill == 1 && (any(lessThan(ua, vec2(0.0))) || any(greaterThan(ua, vec2(1.0))))) {
        return vec3(0.0);
    }
    if (u_fill == 2) ua = fract(ua);
    if (u_rgba_a == 1) {
        return texture(luma_a, ua).rgb;
    }
    return nv12(texture(luma_a, ua).r, texture(chroma_a, ua).rg);
}
vec3 side_b(vec2 uv) {
    vec2 ub = uv * u_uv_b.xy + u_uv_b.zw;
    if (u_fill == 1 && (any(lessThan(ub, vec2(0.0))) || any(greaterThan(ub, vec2(1.0))))) {
        return vec3(0.0);
    }
    if (u_fill == 2) ub = fract(ub);
    if (u_rgba_b == 1) {
        return texture(luma_b, ub).rgb;
    }
    return nv12(texture(luma_b, ub).r, texture(chroma_b, ub).rg);
}
void main() {
    if (v_alpha < 0.004) {
        discard;
    }
    vec2 uv = clamp(v_uv, vec2(0.0), vec2(1.0));
    float k = clamp(v_mix, 0.0, 1.0);
    vec3 rgb;
    if (k < 0.001) {
        rgb = side_a(uv);
    } else if (k > 0.999) {
        rgb = side_b(uv);
    } else {
        rgb = mix(side_a(uv), side_b(uv), k);
    }
    frag = vec4(rgb * v_bright, v_alpha);
}
